MOD: Fix vertical alignment of the title in toolbar.

--- a/Intranet-1.0/intranet/public/css/intranet.css
+++ b/Intranet-1.0/intranet/public/css/intranet.css
@@ -76,6 +76,7 @@ h1 {
 	display: inline;
 	margin: .5em;
 	font-size: 1.4em;
+	vertical-align: middle;
 }
 
 #toolbar {
